* Fullcalendar unit & demo

--- a/trunk/demo/Makefile
+++ b/trunk/demo/Makefile
@@ -5,7 +5,7 @@ TARGETS=democomponents demobrowseconsole demoajax demoxhr restbridgeclient \
   chartjs_demoline chartjs_demotime chartjs_demoscriptablebubble chartjs_demoradar \
   chartjs_democustompoints chartjs_demopolararea promiseall promisestory1 \
   promisestory2 promisestory demodb demoload demorest fpcunitbrowsertest \
-  sampleda webgl1 pdfbasic hotreload dynload bootstraptable
+  sampleda webgl1 pdfbasic hotreload dynload bootstraptable fullcalendar
 ifneq ($(SKIPWEBCOMPILER),1)
 TARGETS:=$(TARGETS) demowebcompiler
 BASEDIR=$(CURDIR)/../compiler/packages
@@ -105,4 +105,5 @@ dynload: ./dynload/testloader.lpr ./dynload/myform.pp
 	$(P2JS) ./dynload/myform.pp
 bootstraptable: ./bootstrap/demobootstraptable.lpr
 	$(BROWSERP2JS) $<
-	
+fullcalendar: ./fullcalendar/demofullcalendar.lpr
+	$(BROWSERP2JS) $<
