* DB Widgets tests

--- a/trunk/packages/webwidget/tests/testwidgets.lpi
+++ b/trunk/packages/webwidget/tests/testwidgets.lpi
@@ -60,6 +60,14 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="tcHTMLWidgets"/>
       </Unit>
+      <Unit>
+        <Filename Value="tcdbhtmlwidgets.pp"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="tcdbwidgets.pp"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
