* Add test for generic array helper

--- a/trunk/test/testrtl.lpi
+++ b/trunk/test/testrtl.lpi
@@ -72,6 +72,10 @@
         <Filename Value="tcsyshelpers.pp"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="tcgenarrayhelper.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
