--- a/trunk/test/testrtl.lpi
+++ b/trunk/test/testrtl.lpi
@@ -80,6 +80,10 @@
         <Filename Value="tcgenericdictionary.pp"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="../packages/rtl/webutils.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
