--- a/trunk/test/testrtl.lpi
+++ b/trunk/test/testrtl.lpi
@@ -84,6 +84,10 @@
         <Filename Value="../packages/rtl/webutils.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="tcgenericlist.pp"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
