* Add TQueue/TObjectQueue

--- a/trunk/test/testrtl.lpi
+++ b/trunk/test/testrtl.lpi
@@ -88,6 +88,10 @@
         <Filename Value="tcgenericlist.pp"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="tcgenericqueue.pp"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
