* Added generic TStack/TObjectStack and tests

--- a/trunk/test/testrtl.lpi
+++ b/trunk/test/testrtl.lpi
@@ -92,6 +92,10 @@
         <Filename Value="tcgenericqueue.pp"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="tcgenericstack.pp"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
